# PylibMS

./: .gitignore  LICENSE  MANIFEST.IN  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
LMS/Common/: Base_Preset.py  LMS_Binary.py  LMS_Block.py  LMS_DataType.py  LMS_Enum.py  LMS_Exceptions.py  LMS_FileInfo.py  LMS_HashTable.py
LMS/Common/Stream/: FileInfo.py  Hashtable.py  Section.py
LMS/Config/: TitleConfig.py
LMS/Config/Definitions/: Attributes.py  Tags.py  Value.py
LMS/Field/: LMS_Field.py  Stream.py
LMS/FileIO/: Encoding.py  Stream.py
LMS/Message/: ATR1.py  MSBT.py  MSBTEntry.py  MSBTStream.py  Preset.py  Preset_Constants.py  System.lua  TSY1.py  TXT2.py  Tags.py  msbtio.py
LMS/Message/Definitions/: LMS_FieldMap.py  LMS_MessageText.py
LMS/Message/Section/: ATR1.py  TSY1.py  TXT2.py
LMS/Message/Tag/: LMS_Tag.py  Stream.py  System.yaml  System_Definition.py  System_Definitions.py  Tag_Formats.py
LMS/Project/: ALI2.py  ATI2.py  BaseBlock.py  CLR1.py  CTI1.py  MSBP.py  MSBPRead.py  SYL3.py  Structure.py  TAG2.py  TGG2.py  TGL2.py  TGP2.py
LMS/Project/Definitions/: Attribute.py  Color.py  Style.py  Tag.py
LMS/Project/Section/: ALI2.py  ATI2.py  CLR1.py  SYL3.py  String.py  TAG2.py  TGG2.py  TGP2.py
LMS/Stream/: Reader.py  Writer.py
LMS/TitleConfig/: Config.py
TOMODACHI Demo Text/: CNzh.Trial.100.sarc.zs
lms/common/: lms_datatype.py  lms_exceptions.py  lms_fileinfo.py
lms/fileio/: encoding.py  io.py
lms/message/: msbt.py  msbtentry.py  msbtio.py
lms/project/: msbp.py  msbpread.py
lms/titleconfig/: config.py
(+66 files in other folders)
